Adjusted method to handle both directions

--- a/views/index.html
+++ b/views/index.html
@@ -89,5 +89,12 @@
       </div>
     </div>
   </body>
-  <script src="../public/translator.js" type="module"></script>
+  <script
+    src="../public/case.min.js"
+    type="module"
+  ></script>
+  <script
+    src="../public/translator.js"
+    type="module"
+  ></script>
 </html>
